crates/hdk/tests/samples/no_timestamp_now.rs
use hdk::prelude::*;

fn main() {
    // Should not be available, will crash in a wasm call
    Timestamp::now();
}
